1. fixing white space in assignment page

--- a/app/assets/stylesheets/assignments_widget.scss
+++ b/app/assets/stylesheets/assignments_widget.scss
@@ -85,7 +85,7 @@
             /* general styles */
             display: inline-block;
             flex-direction: column;
-            margin: 0px 5px;
+            margin: 0px 3px;
             border-radius: 5px;
         }
         .task-title {
@@ -163,8 +163,8 @@
                     white-space: nowrap;
                     flex-direction: row;
                     min-height: 82px;
-                    padding-bottom: 10px;
-                    padding-top: 10px;
+                    padding-bottom: 5px;
+                    padding-top: 5px;
                     padding-left: 5px;
                     padding-right: 5px;
                     width: 100%;
@@ -263,7 +263,7 @@
             }
         }
         .unassigned-task-container {
-            margin-top: 48px;
+            padding-top: 54px;
             position: fixed;
             display: flex;
             flex-direction: column;
@@ -277,7 +277,7 @@
                 flex: 0 1 auto;
                 background-color: $devblue;
                 border: 1px solid $devblue-dark;
-                margin: 10px;
+                margin: 5px 10px;
                 h5 {
                     white-space: nowrap;
                     width: 110px;
@@ -295,7 +295,7 @@
                 flex: 1;
                 background-color: $lightgray;
                 border: 1px solid $gray;
-                margin: 10px;
+                margin: 5px 10px;
                 .task-title {
                     color: $darkgray;
                     h5 {
